--- a/app/globals.css
+++ b/app/globals.css
@@ -6,30 +6,50 @@
   @apply bg-slate-200 px-4 py-2 rounded-md font-semibold hover:scale-105 transition;
 }
 
-h1{
+body {
+  /* -------------- */
+  /* -------------- */
+  /* -------------- */
+  /* to prevent user from selecting text */
+  -webkit-user-select: none;
+  -moz-user-select: -moz-none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+img {
+  pointer-events: none;
+}
+
+h1 {
   @apply text-2xl font-bold;
 }
 
-h2{
+h2 {
   @apply text-2xl font-bold my-4;
 }
 
-p.content{
+p.content {
   @apply leading-loose;
 }
 
-.link{
+.link {
   @apply text-[#0d6efd] font-bold max-w-full overflow-hidden text-ellipsis;
 }
 
-.primary-btn{
+.primary-btn {
   @apply px-4 py-2 bg-slate-800 text-white rounded-md;
 }
 
-input,textarea{
+.nav-profile-image {
+  pointer-events: all;
+}
+
+input,
+textarea {
   @apply px-4 py-2 border border-slate-300 rounded-md;
 }
 
-textarea{
+textarea {
   @apply h-36;
 }
