--- a/app/globals.css
+++ b/app/globals.css
@@ -31,6 +31,11 @@ h2 {
 
 p.content {
   @apply leading-loose;
+  display: -webkit-box;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .link {
